PROJECT(pebble_rpc)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/src
)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/pebble_rpc/lib)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
SET(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tools)
